--- a/styles.css
+++ b/styles.css
@@ -4,22 +4,14 @@ html {
 
 body {
     height: 100%;
-    background-image: url("assets/images/fondo-2.jpg");
+    background-image: url("assets/images/back1.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }
 
 canvas {
     height: 100% !important;
-}
-
-#webar {
-    margin-top: 50px;
-    margin-bottom: .5rem;
-    width: 95%;
-    height: 250px;
-    background-color: #000000;
-    border: 3px white solid;
+    width: 100% !important;
 }
 
 #webcam:hover {
@@ -43,7 +35,7 @@ canvas {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
+    align-items: center; 
 }
 
 .logos{
@@ -55,22 +47,53 @@ canvas {
     align-items: center;
 }
 
+.farmatodo {
+    height: 10%;
+    margin: .5rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.farmatodo img {
+    width: 200px;
+}
+
+#webar {
+    margin: .5rem 0;
+    width: 95%;
+    height: 50%;
+    background-color: #000000;
+    border: 5px white solid;
+}
+
 .banner {
+    height: 15%;
     margin: .5rem 0;
     padding: 0 5rem;
 }
 
 .banner img {
     width: 100%;
-    height: auto;
+    max-height: 90%;
 }
 
 .miniaturas {
+    width: 100%;
+    height: 25%;
     margin: .5rem 0;
-    padding: 0 8%;
-    height: auto;
     display: flex;
-    justify-content: flex-start;    
+    justify-content: center;    
     flex-wrap: wrap;
     gap: 5px;
+}
+
+.miniaturas img {
+    width: 30%;
+    max-height: 45%;
+}
+
+.miniaturas img:hover {
+    border: 3px white solid;
+    cursor: pointer;
 }
